styled question show question correctly to have uniform spacing and margins and footer elements

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -105,14 +105,16 @@ body {
   padding-top: 2rem;
   width: 100%;
 }
-
+.remov-border-of-el{
+  border:0;
+}
 
 .main-content{
   height: auto;
   /* min-height: 1000px; */
   min-width: 400px;
   width: 100%;
-  margin-bottom: 2em;
+  margin-bottom: 80px;
   position: relative;
   /* top: 2rem; */
 
