--- a/app/assets/stylesheets/footer.css
+++ b/app/assets/stylesheets/footer.css
@@ -1,6 +1,7 @@
 .site-footer-container{
   height: 7em;
   min-width: 600px;
+  min-height: 200px;
   width: 100%;
   padding-top: 2em;
   display: flex;
